update migration and schema

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ ENVIRONMENT=development
 DATABASE_URL=postgres://postgres:password@localhost:5432/fastline?sslmode=disable
 
 # JWT Configuration
-JWT_SECRET=replace-with-your-generated-secret-key
+JWT_SECRET=JWT_SECRET
