--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ ENVIRONMENT=development
 DATABASE_URL=postgres://postgres:password@localhost:5432/fastline?sslmode=disable
 
 # JWT Configuration
-JWT_SECRET=JWT_SECRET
+JWT_SECRET=2499d600f7df1ad1b42f8e1b34938861
